--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Festive&family=Mountains+of+Christmas:wght@700&display=swap');
+
+
 * {
     margin:0;
     padding:0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Mountains of Christmas", sans-serif;
     font-size: 40px;
 }
 
-/* body {
-    background-color: white;
-    font-family: "Raleway", sans-serif;
-    color: #445361;
-    text-align: center;
-    color: var(--text);
-} */
+* body {
+    background-image: url(../images/vecteezy_christmas-trees-background_.jpg);
+    background-size:cover;
+    background-position: center;
+    min-height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    position:relative;
+}
 
+/* 
 .background {
     background-image: url(../images/vecteezy_christmas-trees-background_.jpg);
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     min-height: 100vh;
     width: 100vw;
     overflow: hidden;
     position:relative;
 
-}
+} */
 
-
-/* CHoices CSS */
-.choice {
-    font-size: 2rem;
-    margin: 1rem;
-    color:crimson;
-}
-
-.choice:hover { 
-    transform: scale(1.3);
-}
