--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     font-size: 40px;
 }
 
+:root {
+    --text: #F7F7F7;
+}
+
 * body {
     background-image: url(../images/vecteezy_christmas-trees-background_.jpg);
     background-size:cover;
@@ -16,6 +20,7 @@
     width: 100vw;
     overflow: hidden;
     position:relative;
+    color: var(--text);
 }
 
 /* 
