--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,14 @@
 
 :root {
     /* --text: #F7F7F7; */
-    --text: #171515;
+    /* --text: #171515; */
+    --text: #010806;
+    
 }
 
 * body {
-    background-image: url(../images/vecteezy_christmas-trees-background_.jpg);
+    /* background-image: url(../images/vecteezy_christmas-trees-background_.jpg); */
+    background-image: url(../images/vecteezy_mountain-winter-view-christmas-tree-background_.jpg);
     background-size:cover;
     background-position: center;
     min-height: 100vh;
@@ -28,7 +31,75 @@ h1.heading {
     font-size: 1.5rem;
 }
 
+p {
+    font-size: 0.7rem;
+}
+
+i {
+    font-size: 0.7rem;
+}
+
 .game-area {
+    box-sizing: border-box;
+    width: 85%;
+    height: 25vh;
+    max-height: 450px;
+    max-width: 830px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+}
+
+.scoreboards {
+    display: flex;
+    height: 4.5rem;
+}
+
+.player-scoreboard {
+        height: 100%;
+        width: 85%;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1%;
+}
+
+.computer-scoreboard {
+    height: 100%;
+    width: 85%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+}
+
+.win {
+box-sizing: border-box;
+width: 85%;
+margin-left: auto;
+margin-right: auto;
+padding: 1%;
+font-size: 5rem;
+}
+
+.rules {
+    border: 5px solid;
+    border-radius: 15px;
+    background-color: aliceblue;
+    padding: 20 20;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding: 20,0 20 0;
+    bottom: 20px;
+    left: 40px;
+    position: absolute;
+}
+
+.results-area {
     box-sizing: border-box;
     width: 85%;
     height: 65vh;
@@ -39,21 +110,7 @@ h1.heading {
     padding: 1%;
 }
 
-.player-scoreboard {
-        box-sizing: border-box;
-        width: 85%;
-        height: 65vh;
-        max-height: 450px;
-        max-width: 830px;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 1%;
-}
-
-.computer-scoreboard {
-    height: 100%;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.how-to-play {
+    width: 100%;
+    text-align: center;
 }
