--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Festive&family=Mountains+of+Christmas:wght@700&display=swap');
 
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     font-family: "Mountains of Christmas", sans-serif;
-    font-size: 40px;
+    font-size: 35px;
+    /* font-size: 40px; */
 }
 
 :root {
     /* --text: #F7F7F7; */
     /* --text: #171515; */
     --text: #010806;
-    
+
 }
 
 * body {
@@ -24,7 +25,7 @@
     min-height: 100vh;
     width: 100vw;
     overflow: hidden; */
-/* 
+    /* 
     position:relative; */
     color: var(--text);
 }
@@ -39,7 +40,7 @@
     width: 100vw;
     overflow: hidden;
     -webkit-filter: blur(2px);
-    z-index: 2; 
+    z-index: 2;
 }
 
 .foreground {
@@ -62,8 +63,21 @@ p {
     font-size: 0.7rem;
 }
 
-i {
+/* i {
     font-size: 0.7rem;
+} */
+
+
+.btn {
+    border: 5px solid;
+    border-radius: 15px;
+    background-color: aliceblue;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    left: auto;
+    /* position: absolute; */
 }
 
 .game-area {
@@ -83,13 +97,13 @@ i {
 }
 
 .player-scoreboard {
-        height: 100%;
-        width: 85%;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 1%;
+    height: 100%;
+    width: 85%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
 }
 
 .computer-scoreboard {
@@ -102,13 +116,38 @@ i {
     padding: 1%;
 }
 
+.choice:hover {
+    transform: scale(1.3);
+}
+
+#rock,
+#far {
+    color: blueviolet;
+}
+
 .win {
-box-sizing: border-box;
-width: 85%;
-margin-left: auto;
-margin-right: auto;
-padding: 1%;
-font-size: 5rem;
+    border: 5px solid;
+    border-radius: 15px;
+    background-color: aliceblue;
+    box-sizing: border-box;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+    font-size: 3rem;
+}
+
+
+.rules {
+    border: 5px solid;
+    border-radius: 15px;
+    background-color: aliceblue;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    left: auto;
+    position: absolute;
 }
 
 .rules {
@@ -133,6 +172,48 @@ font-size: 5rem;
     margin-right: auto;
     padding: 1%;
 }
+
+
+
+
+/* WORK this out */
+
+.modal-content {
+    position: relative;
+    background-color: #f1d68b;
+    text-align: center;
+    color: black;
+    margin: 15% auto;
+    padding: 3rem;
+    border: 3px solid white;
+    width: 80%;
+}
+
+.close {
+    color: black;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
 
 .how-to-play {
     width: 100%;
