--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,9 +101,11 @@ p {
     width: 85%;
     justify-content: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     padding: 1%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;;
 }
 
 .computer-scoreboard {
@@ -111,18 +113,29 @@ p {
     width: 85%;
     justify-content: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     padding: 1%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .choice:hover {
     transform: scale(1.3);
 }
 
+i#computer-icon {
+    transform: scale(1.3);
+}
+
 #rock,
 #far {
     color: blueviolet;
+}
+
+.round-results {
+    padding-bottom: 32px;
+    padding-top: 10px;
 }
 
 .win {
@@ -135,6 +148,7 @@ p {
     margin-right: auto;
     padding: 1%;
     font-size: 3rem;
+    margin-bottom: 20PX;
 }
 
 
@@ -177,7 +191,7 @@ p {
 
 
 /* WORK this out */
-
+/* Inspiration from W3Schools modal layout. */
 .modal-content {
     position: relative;
     background-color: #f1d68b;
@@ -188,6 +202,20 @@ p {
     border: 3px solid white;
     width: 80%;
 }
+
+/* Inspiration from W3Schools modal layout. */
+.winner-modal {
+    display: none; /* Modal is hidden by default */
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
 
 .close {
     color: black;
