--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: "Mountains of Christmas", sans-serif;
     font-size: 35px;
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     /* font-size: 40px; */
 }
 
