--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,8 @@ i {
 
 .choice:hover {
     transform: scale(1.3);
-    color: rgb(179, 161, 0);
+    /* color: rgb(179, 161, 0); */
+    color:#3D1201;
 }
 
 i#computer-icon {
@@ -150,7 +151,8 @@ i#computer-icon {
 .round-results {
     padding-bottom: 32px;
     padding-top: 10px;
-    color:rgb(131, 118, 0);
+    /* color:rgb(131, 118, 0); */
+    color:#3D1201;
 }
 
 .win {
