--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,6 +303,19 @@ h3 {
 }
 
 
+
+
+
+
+/* Mobile */
+
+
+@media only screen and (min-width: 320px) {
+    * {
+        font-size: 20px;
+    }
+
+
 /* Laptop */
 
 @media only screen and (min-width: 1024px) {
@@ -362,7 +375,7 @@ h3 {
     }
 
     .choice {
-        font-size: 3rem;
+        font-size: 1rem;
     }
 
     .computer i {
