--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,14 @@
     padding: 0;
     font-family: "Mountains of Christmas", sans-serif;
     font-size: 35px;
-    /* background-color: aliceblue; */
-    /* font-size: 40px; */
 }
 
 :root {
-    /* --text: #F7F7F7; */
-    /* --text: #171515; */
     --text: #010806;
-
 }
 
 * body {
     /* background-image: url(../images/vecteezy_christmas-trees-background_.jpg); */
-
     /* background-image: url(../images/vecteezy_mountain-winter-view-christmas-tree-background_.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -65,7 +59,7 @@ p {
 }
 
 i {
-    /* font-size: 0.7rem; */
+    font-size: 0.7rem;
     transition: 100ms;
 }
 
@@ -135,11 +129,6 @@ i#computer-icon {
     color:rgbb(131, 118, 0);
 }
 
-/* #rock,
-#far {
-    color: blueviolet;
-} */
-
 .round-results {
     padding-bottom: 32px;
     padding-top: 10px;
@@ -193,12 +182,12 @@ i#computer-icon {
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    width: 100%;
+    height: 100%;
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -228,7 +217,9 @@ i#computer-icon {
     background-color: rgba(0,0,0,0.4); 
 }
 
-
+i.fas.fa-times-circle {
+    margin-right: 5px;
+}
 
 
 .rules-content {
