--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ h3 {
 
 @media only screen and (min-width: 320px) {
     * {
-        font-size: 20px;
+        /* font-size: 20px; */
     }
 
 
