--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,14 +5,20 @@
     padding: 0;
     font-family: "Mountains of Christmas", sans-serif;
     font-size: 35px;
+    /* background-color: aliceblue; */
+    /* font-size: 40px; */
 }
 
 :root {
+    /* --text: #F7F7F7; */
+    /* --text: #171515; */
     --text: #010806;
+
 }
 
 * body {
     /* background-image: url(../images/vecteezy_christmas-trees-background_.jpg); */
+
     /* background-image: url(../images/vecteezy_mountain-winter-view-christmas-tree-background_.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -59,7 +65,7 @@ p {
 }
 
 i {
-    font-size: 0.7rem;
+    /* font-size: 0.7rem; */
     transition: 100ms;
 }
 
@@ -76,6 +82,14 @@ i {
     /* position: absolute; */
 }
 
+
+/* div#game-screen {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2,1fr);
+    justify-items: center;
+    align-items: center;
+} */
 
 .game-area {
     box-sizing: border-box;
@@ -120,29 +134,24 @@ i {
 
 .choice:hover {
     transform: scale(1.3);
-    /* color: rgb(179, 161, 0); */
-    /* color:#3D1201; */
-    color:rgb(212, 89, 0)
-}
+    color: rgb(179, 161, 0);
 }
 
 i#computer-icon {
     transform: scale(1.3);
-    /* color:rgbb(131, 118, 0); */
-    color:rgb(212, 89, 0)
+    /* color:rgb(87, 102, 1); */
+    color: rgb(179, 161, 0);
 }
-}
+
+/* #rock,
+#far {
+    color: blueviolet;
+} */
 
 .round-results {
     padding-bottom: 32px;
     padding-top: 10px;
-    /* color:rgb(131, 118, 0);
-    color:#3D1201; */
-    color:rgb(212, 89, 0)
-}
-
-span#round-answer {
-    color:rgb(212, 89, 0)
+    color:rgb(179, 161, 0);
 }
 
 .win {
@@ -183,7 +192,12 @@ span#round-answer {
 }
 
 
-/* Researched reference modals from W3Schools */
+
+
+/* WORK this out */
+/* Inspiration from W3Schools modal layout. */
+
+
 /* https://www.w3schools.com/howto/howto_css_modals.asp */
 
 
@@ -191,12 +205,12 @@ span#round-answer {
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1;
-    padding-top: 100px;
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -209,11 +223,12 @@ span#round-answer {
     text-align: center;
     color: black;
     margin: 15% auto;
+    padding: 3rem;
     border: 3px solid black;
     width: 80%;
 }
 
-
+/* Inspiration from W3Schools modal layout. */
 .winner-modal {
     display: none; /* Modal is hidden by default */
     position: fixed; 
@@ -226,9 +241,7 @@ span#round-answer {
     background-color: rgba(0,0,0,0.4); 
 }
 
-i.fas.fa-times-circle {
-    margin-right: 5px;
-}
+
 
 
 .rules-content {
@@ -242,9 +255,9 @@ i.fas.fa-times-circle {
     width: 80%;
 }
 
-
+/* Inspiration from W3Schools modal layout. */
 .rules-modal {
-    display: none;
+    display: none; /* Modal is hidden by default */
     position: fixed; 
     z-index: 1; 
     left: 0;
@@ -287,6 +300,18 @@ i.fas.fa-times-circle {
     cursor: pointer;
   }
 
+
+
+/* was this but above is W3 ref:
+.close {
+    color: black;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 2rem;
+    font-weight: bold;
+} */
+
 h3 {
     display: block;
     font-size: 1.17em;
@@ -297,88 +322,14 @@ h3 {
     font-weight: bold;
 }
 
+
+
+
+
+
+
+
 .how-to-play {
     width: 100%;
     text-align: center;
-}
-
-
-
-
-
-
-/* Mobile */
-
-
-@media only screen and (min-width: 320px) {
-    * {
-        /* font-size: 20px; */
-    }
-
-
-/* Laptop */
-
-@media only screen and (min-width: 1024px) {
-    .icons>i {
-        font-size: 4rem;
-    }
-
-    .modal-header {
-        font-size: 4rem;
-    }
-
-    .modal-result {
-        font-size: 2rem;
-    }
-}
-
-/* Tablet styles */
-
-@media only screen and (min-width: 768px) {
-   
-    .icons>i {
-        font-size: 3.5rem;
-        margin-bottom: 2rem;
-    }
-
-    .how-to-play h2 {
-        font-size: 2.5rem;
-    }
-
-    .controls {
-        font-size: 2rem;
-    }
-
-    .game-area {
-        height: 90vh;
-        justify-content: center;
-    }
-
-    .round-result {
-        font-size: 3rem;
-    }
-
-    .players span {
-        font-size: 2.3rem;
-    }
-
-    .player, .computer {
-        padding: 2rem 0;
-    }
-
-    .player h2, .computer h2 {
-        font-size: 2.8rem;
-    }
-
-    .player, .computer p {
-        font-size: 2.3rem;
-    }
-
-    .choice {
-        font-size: 1rem;
-    }
-
-    .computer i {
-        font-size: 3rem;
-    }
 }
