--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,96 @@
     margin: 0;
     padding: 0;
     font-family: "Mountains of Christmas", sans-serif;
-    font-size: 35px;
+    /* font-size: 25px; */
     /* background-color: aliceblue; */
     /* font-size: 40px; */
 }
+
+
+
+/* Laptop styles */
+@media only screen and (min-width: 1024px) {
+    .icons>i {
+        font-size: 4rem;
+    }
+
+    * {
+        font-size: 40px;
+    }
+
+    .modal-header {
+        font-size: 4rem;
+    }
+
+    .modal-result {
+        font-size: 2rem;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        /* left: 3rem; */
+        top: 0;
+        /* width: 80%; */
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+}
+
+/* Tablet  */
+@media only screen and (min-width: 720px) {
+    i {
+        font-size: 0.7rem;
+        transition: 100ms;
+    }
+}
+
+/* MOBILES */
+@media only screen and (min-width: 510px) {
+    .game-area {
+        box-sizing: border-box;
+        width: 70%;
+        max-height: 450px;
+        max-width: 830px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    h1.heading {
+        font-size: 1.2rem;
+    }
+
+    .win {
+        border: 5px solid;
+        border-radius: 15px;
+        background-color: aliceblue;
+        box-sizing: border-box;
+        padding: 1%;
+        margin-top: 100px;
+    }
+
+    .modal-content {
+        position: relative;
+        background-color: aliceblue;
+        text-align: center;
+        color: black;
+        margin: 15% auto;
+        border: 3px solid black;
+        width: 80%;
+    }
+
+}
+
+
+
+/* END MOBILES */
+
+
+
 
 :root {
     /* --text: #F7F7F7; */
@@ -55,7 +141,7 @@
 
 h1.heading {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 p {
@@ -63,7 +149,7 @@ p {
 }
 
 i {
-    /* font-size: 0.7rem; */
+    font-size: 0.7rem;
     transition: 100ms;
 }
 
@@ -106,7 +192,8 @@ i {
     align-items: center;
     padding: 1%;
     justify-content: space-evenly;
-    flex-wrap: wrap;;
+    flex-wrap: wrap;
+    ;
 }
 
 .computer-scoreboard {
@@ -135,7 +222,7 @@ i#computer-icon {
 .round-results {
     padding-bottom: 32px;
     padding-top: 10px;
-    color:rgb(179, 161, 0);
+    color: rgb(179, 161, 0);
 }
 
 .win {
@@ -147,7 +234,7 @@ i#computer-icon {
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
-    font-size: 3rem;
+    /* font-size: 3rem; */
     margin-bottom: 20PX;
 }
 
@@ -180,20 +267,34 @@ i#computer-icon {
 
 /* Reference to W3Schools modal layout. */
 /* https://www.w3schools.com/howto/howto_css_modals.asp */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+/* .modal {
+    display: none; Hidden by default
+    position: fixed; Stay in place
+    z-index: 1; Sit on top
+    padding-top: 100px; Location of the box
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
+    width: 100%; Full width 
+    height: 100%; Full height
+    overflow: auto; Enable scroll if needed 
+    background-color: rgb(0,0,0); Fallback color 
+    background-color: rgba(0,0,0,0.4); Black w/ opacity 
+  } */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 3rem;
+    top: 0;
+    width: 80%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
 
 .modal-content {
     position: relative;
@@ -208,14 +309,14 @@ i#computer-icon {
 
 .winner-modal {
     display: none;
-    position: fixed; 
-    z-index: 1; 
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 
@@ -234,14 +335,14 @@ i#computer-icon {
 
 .rules-modal {
     display: none;
-    position: fixed; 
-    z-index: 1; 
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 
@@ -251,34 +352,34 @@ i#computer-icon {
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
 
 
-  .open {
+.open {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .open:hover,
-  .open:focus {
+}
+
+.open:hover,
+.open:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
 h3 {
     display: block;
-    font-size: 1.17em;
+    /* font-size: 1.17em; */
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
