--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@
     }
 }
 
+
 /* Tablet  */
 @media only screen and (min-width: 720px) {
     i {
@@ -52,8 +53,47 @@
     }
 }
 
+
+/* Tablet  */
+@media only screen and (min-width: 760px) {
+    h1.heading {
+        font-size: 3rem;
+    }
+
+    .scoreboards {
+        transform: scale(1.3);
+    }
+
+    p.score {
+        font-size: 3rem;
+    }
+
+    p {
+        font-size: 2rem;
+    }
+
+    i {
+        font-size: 2rem;
+    }
+
+
+    .win {
+        border: 5px solid;
+        border-radius: 15px;
+        background-color: aliceblue;
+        box-sizing: border-box;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1%;
+        font-size: 2rem;
+        margin-bottom: 20PX;
+    }
+}
+
+
 /* MOBILES */
-@media only screen and (min-width: 510px) {
+@media only screen and (min-width: 520px) {
     .game-area {
         box-sizing: border-box;
         width: 70%;
@@ -64,8 +104,9 @@
     }
 
     h1.heading {
-        font-size: 1.2rem;
+        /* font-size: 1.2rem; */
     }
+
 
     .win {
         border: 5px solid;
@@ -141,7 +182,7 @@
 
 h1.heading {
     text-align: center;
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
 }
 
 p {
