--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,9 +35,9 @@ header {
 
 footer {
     position: absolute;
-    width:100%;
-    left:0;
-    bottom:0;
+    width: 100%;
+    left: 0;
+    bottom: 0;
     box-sizing: border-box;
     min-height: 60px;
     padding-top: 5px;
@@ -64,7 +64,6 @@ footer {
     transform: translate(-50%, -49%);
     z-index: 2;
     width: 85%;
-    padding: 20px;
     text-align: center;
 }
 
@@ -374,29 +373,21 @@ h3 {
     }
 
     h1 {
+        font-size: 14px;
+        margin: 10px;
+    }
+
+    .modal-content h1 {
         font-size: 20px;
+        margin: 10px;
     }
 
     .round-results {
         padding-bottom: 10px;
         padding-top: 10px;
+        font-size: 12px;
         color: rgb(179, 161, 0);
     }
-
-    /* .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        padding-top: 100px;
-        left: 80px;
-        /* left: 2rem; */
-        /* top: 20px;
-        width: 50%;
-        height: 100%; */
-        /* overflow: auto; */
-        /* background-color: rgb(0, 0, 0); */
-        /* background-color: rgba(0, 0, 0, 0.4); */
-    
 
     .modal {
         position: fixed;
@@ -421,7 +412,5 @@ h3 {
 
     .win {
         width: 90%;
-     }
-
-
+    }
 }
