--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,8 +74,9 @@ p {
 }
 
 i {
-    font-size: 0.7rem;
+    /* font-size: 0.7rem; */
     transition: 100ms;
+    font-size: 1.5rem;
 }
 
 
@@ -88,7 +89,7 @@ i {
     padding-left: 10px;
     padding-right: 10px;
     left: auto;
-    /* position: absolute; */
+    font-size: 1rem;
 }
 
 .game-area {
@@ -190,20 +191,6 @@ i#computer-icon {
 
 /* Reference to W3Schools modal layout. */
 /* https://www.w3schools.com/howto/howto_css_modals.asp */
-/* .modal {
-    display: none; Hidden by default
-    position: fixed; Stay in place
-    z-index: 1; Sit on top
-    padding-top: 100px; Location of the box
-    left: 0;
-    top: 0;
-    width: 100%; Full width 
-    height: 100%; Full height
-    overflow: auto; Enable scroll if needed 
-    background-color: rgb(0,0,0); Fallback color 
-    background-color: rgba(0,0,0,0.4); Black w/ opacity 
-  } */
-
 .modal {
     display: none;
     position: fixed;
@@ -272,7 +259,6 @@ i#computer-icon {
 /* The Close Button */
 .close {
     color: #aaaaaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
 }
@@ -412,5 +398,99 @@ h3 {
 
     .win {
         width: 90%;
+    }
+}
+
+
+/* Tablet  */
+@media only screen and (min-width: 768px) {
+    h1.heading {
+        font-size: 3rem;
+    }
+
+    .scoreboards {
+        transform: scale(1.2.5);
+        padding: 5px;
+    }
+
+    p.score {
+        transform: scale(1.9);
+    }
+
+    p {
+        font-size: 2rem;
+    }
+
+    i {
+        /* font-size: 2rem; */
+        font-size: 1.5rem;
+        transition: 100ms;
+    }
+
+    .win {
+        border: 5px solid;
+        border-radius: 15px;
+        background-color: aliceblue;
+        box-sizing: border-box;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1%;
+        font-size: 2rem;
+        margin-bottom: 20px;
+        height: 37vh;
+    }
+
+    .scoreboards {
+        display: flex;
+        height: 4.5rem;
+        flex-direction: column;
+        word-spacing: 5px;
+        justify-content: space-between;
+    }
+
+    .game-area {
+        box-sizing: border-box;
+        width: 80%;
+        height: 25vh;
+        margin-left: 5rem;
+    }
+
+    .round-results {
+        padding-bottom: 10px;
+        font-size: 12px;
+        color: rgb(179, 161, 0);
+        font-size: 2rem;
+    }
+
+    .win {
+        width:85%;
+     }
+
+     .modal-content h1 {
+        font-size: 3rem;
+    }
+
+    .modal {
+        width: 85%;
+        left: 8%;
+      }
+
+      .player-scoreboard {
+        flex-direction: row;
+    }
+
+    .computer-scoreboard {
+        flex-direction: row;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .rules-btn {
+        height: 10vh;
+        padding: 20px;
+        transform: scale(1.5);
     }
 }
