--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,3 +501,36 @@ h3 {
         transform: scale(1.5);
     }
 }
+
+/* Laptop styles */
+@media only screen and (min-width: 1280px) {
+    #background {
+        transform: scale(1.3);
+    }
+    .win {
+        height: 50vh;
+    }
+    h1.heading {
+        font-size: 3.5rem;
+    }
+
+    .scoreboards {
+        display: flex;
+        height: 4.5rem;
+        flex-direction: column;
+        word-spacing: 5px;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-content: stretch;
+        align-items: flex-end;
+    }
+
+    .choices {
+        transform: scale(1.5);
+        letter-spacing: 10px;
+    }
+    
+    button#myBtn {
+        font-size: 15px;
+    }
+}
