--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,28 +4,14 @@
     margin: 0;
     padding: 0;
     font-family: "Mountains of Christmas", sans-serif;
-    /* font-size: 25px; */
-    /* background-color: aliceblue; */
-    /* font-size: 40px; */
 }
 
 :root {
-    /* --text: #F7F7F7; */
-    /* --text: #171515; */
     --text: #010806;
 
 }
 
 * body {
-    /* background-image: url(../images/vecteezy_mountain-winter-view-christmas-tree-background_.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100vh;
-    width: 100vw;
-    overflow: hidden; */
-    /* 
-    position:relative; */
     color: var(--text);
 }
 
@@ -67,14 +53,11 @@ footer {
     text-align: center;
 }
 
-
-
 p {
     font-size: 0.9rem;
 }
 
 i {
-    /* font-size: 0.7rem; */
     transition: 100ms;
     font-size: 1.5rem;
 }
@@ -141,7 +124,6 @@ i {
 
 i#computer-icon {
     transform: scale(1.3);
-    /* color:rgb(87, 102, 1); */
     color: rgb(179, 161, 0);
 }
 
@@ -160,7 +142,6 @@ i#computer-icon {
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
-    /* font-size: 3rem; */
     margin-bottom: 20PX;
 }
 
@@ -205,7 +186,6 @@ i#computer-icon {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-
 .modal-content {
     position: relative;
     background-color: aliceblue;
@@ -228,9 +208,6 @@ i#computer-icon {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
-
-
-
 
 .rules-content {
     position: relative;
@@ -255,8 +232,6 @@ i#computer-icon {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-
-/* The Close Button */
 .close {
     color: #aaaaaa;
     font-size: 28px;
@@ -269,8 +244,6 @@ i#computer-icon {
     text-decoration: none;
     cursor: pointer;
 }
-
-
 
 .open {
     color: #aaaaaa;
@@ -288,7 +261,6 @@ i#computer-icon {
 
 h3 {
     display: block;
-    /* font-size: 1.17em; */
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -296,13 +268,12 @@ h3 {
     font-weight: bold;
 }
 
-
 .how-to-play {
     width: 100%;
     text-align: center;
 }
 
-/* MOBILES */
+/* Mobile - Media queries */
 @media only screen and (min-width: 320px) {
     h1.heading {
         font-size: 1.2rem;
@@ -409,7 +380,7 @@ h3 {
 }
 
 
-/* Tablet  */
+/* Tablet - Media queries  */
 @media only screen and (min-width: 768px) {
     h1.heading {
         font-size: 3rem;
@@ -429,7 +400,6 @@ h3 {
     }
 
     i {
-        /* font-size: 2rem; */
         font-size: 1.5rem;
         transition: 100ms;
     }
@@ -471,19 +441,19 @@ h3 {
     }
 
     .win {
-        width:85%;
-     }
+        width: 85%;
+    }
 
-     .modal-content h1 {
+    .modal-content h1 {
         font-size: 3rem;
     }
 
     .modal {
         width: 85%;
         left: 8%;
-      }
+    }
 
-      .player-scoreboard {
+    .player-scoreboard {
         flex-direction: row;
     }
 
@@ -498,18 +468,20 @@ h3 {
     .rules-btn {
         height: 10vh;
         padding: 20px;
-        transform: scale(1.5);
+        font-size: 40px;
+    }
+
+    button#myBtn {
+        font-size: 25px;
     }
 }
 
-/* Laptop styles */
+/* Laptop - Media queries  */
 @media only screen and (min-width: 1280px) {
-    #background {
-        transform: scale(1.3);
-    }
     .win {
-        height: 50vh;
+        height: 45vh;
     }
+
     h1.heading {
         font-size: 3.5rem;
     }
@@ -525,12 +497,96 @@ h3 {
         align-items: flex-end;
     }
 
+    .player-scoreboard {
+        height: 100%;
+        width: 85%;
+        display: flex;
+        align-items: center;
+        padding: 1%;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        align-content: flex-end;
+    }
+
     .choices {
         transform: scale(1.5);
         letter-spacing: 10px;
     }
-    
+
+    .score {
+        font-size: 35px;
+    }
+
+    i#computer-icon {
+        transform: scale(1.8);
+    }
+
     button#myBtn {
-        font-size: 15px;
+        font-size: 2rem;
+    }
+
+    .rules-btn {
+        height: 16vh;
+    }
+}
+
+/* Desktop - Media queries  */
+@media only screen and (min-width: 1600px) {
+    .win {
+        height: 38vh;
+    }
+
+    h1.heading {
+        font-size: 3.5rem;
+    }
+
+    .scoreboards {
+        display: flex;
+        height: 4.5rem;
+        flex-direction: column;
+        word-spacing: 5px;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-content: stretch;
+        align-items: flex-end;
+    }
+
+    .player-scoreboard {
+        height: 100%;
+        width: 85%;
+        display: flex;
+        align-items: center;
+        padding: 1%;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        align-content: flex-end;
+    }
+
+    .choices {
+        transform: scale(1.5);
+        letter-spacing: 10px;
+    }
+
+    .score {
+        font-size: 35px;
+    }
+
+    i#computer-icon {
+        transform: scale(1.8);
+    }
+
+    button#myBtn {
+        font-size: 2rem;
+    }
+
+    .rules-btn {
+        height: 16vh;
+    }
+
+    .game-area {
+        box-sizing: border-box;
+        width: 80%;
+        height: 25vh;
+        margin-left: 11rem;
     }
 }
